# pytest_hw

./: .coverage  .gitignore  README.md  mylog.txt  pyproject.toml
src/: decorators.py  generators.py  masks.py  mylog.txt  processing.py  widget.py
tests/: mylog.txt  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
